<resources>
    <string name="app_name">Simple Food Logger</string>
    <string name="menu_home">Home</string>
    <string name="menu_foods">Food Items</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="previous_day">Previous Day</string>
    <string name="next_day">Next Day</string>
    <string name="select">Select</string>
    <string name="recent">Recent</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="extended_search">Include results from USDA database</string>
    <string name="summary_tab_summary">Summary</string>
    <string name="summary_tab_foods">Food Stats</string>
    <string name="food_list_fragment_kcal">%1$d kcal / 100g</string>
    <string name="food_list_fragment_kcal_imperial">%1$d kcal / 3.5oz</string>
    <string name="food_list_fragment_protein">Protein: %1$sg</string>
    <string name="food_list_fragment_carbs">Carbs: %1$sg</string>
    <string name="food_list_fragment_fat">Fat: %1$sg</string>
    <string name="home_fragment_goal_kcal">Calories: %1$d / %2$s</string>
    <string name="home_fragment_goal_protein">%1$d / %2$s g</string>
    <string name="home_fragment_goal_carbs">%1$d / %2$s g</string>
    <string name="home_fragment_goal_fat">%1$d / %2$s g</string>
    <string name="home_fragment_log_title">%1$s, %2$s%3$s</string>
    <string name="home_fragment_log_kcal">%1$d kcal</string>
    <string name="set_macros_fragment_percent_macro_info"> %1$d g x %2$d kcal/g = %3$d kcal</string>
    <string name="set_macros_fragment_percent_bottom_info">Sum of percentages: %1$d%%</string>
    <string name="set_macros_fragment_percent_bottom_info2">Percentages should add up to 100%</string>
    <string name="set_macros_fragment_manual_macro_info">g x %1$d kcal/g = %2$d kcal = %3$d%%</string>
    <string name="set_macros_fragment_manual_bottom_info">Sum of calories: %1$d kcal</string>
    <string name="set_macros_fragment_manual_bottom_info2">Sum should match current target (%1$d kcal)</string>
    <string name="settings_fragment_macros_summary">Protein: %1$dg (%2$d%%)\nCarbs: %3$dg (%4$d%%)\nFat: %5$dg (%6$d%%)</string>
    <string name="dialog_add_food_nutrition_textview_metric">"Nutrition Info (per 100 g)"</string>
    <string name="dialog_add_food_nutrition_textview_imperial">"Nutrition Info (per 3.5 oz / 100 g)"</string>
    <string name="dialog_add_food_servings_textview_metric">Serving Sizes (g)</string>
    <string name="dialog_add_food_servings_textview_imperial">Serving Sizes (oz)</string>
    <string name="dialog_add_food_serving1_hint_metric">50.0</string>
    <string name="dialog_add_food_serving2_hint_metric">100.0</string>
    <string name="dialog_add_food_serving3_hint_metric">250.0</string>
    <string name="dialog_add_food_serving1_hint_imperial">1.0</string>
    <string name="dialog_add_food_serving2_hint_imperial">3.0</string>
    <string name="dialog_add_food_serving3_hint_imperial">8.0</string>
    <string name="dialog_add_log_weight_textview_metric">Weight (g)</string>
    <string name="dialog_add_log_weight_textview_imperial">Weight (oz)</string>
    <string name="tutorial_home_page_title">Home Page</string>
    <string name="tutorial_home_page_text">Thank you for downloading Simple Food Logger. This is the home page, where you can see all your logged meals for the day as well as the sum of calories and macronutrients you have consumed. Click the floating button with the plus sign on the bottom right corner to add a new log. You can change the selected day by clicking the text or the arrows on the toolbar at the top.</string>
    <string name="tutorial_food_list_title">Adding New Log or Food Item</string>
    <string name="tutorial_food_list_text">This is the food database. Click on a food item to add a new log. You can find specific food items by using the search in the toolbar or simply by browsing through categories or recently eaten and favorite item tabs. You can add new custom foods by clicking the plus icon in the top right corner.</string>
    <string name="tutorial_statistics_title">Summary View</string>
    <string name="tutorial_statistics_text">This is the summary page, where you can review consumed calories and macronutrients and your daily averages for selected time period. In the \'Food Stats\' tab, you can also review stats for each consumed food item. You can change the selected time period and sorting order by using the buttons in the toolbar in the top right corner.</string>
    <string name="tutorial_edit_food_noncustom_title">Editing Non-Custom Food Items</string>
    <string name="tutorial_edit_food_noncustom_text">For all non-custom food items, you can only change the serving names or sizes. You may also choose to the option to hide non-custom food items, so that they will no longer appear in search results or when browsing food categories. You can later restore hidden food items in the settings.</string>
    <string name="list_item_food_type_custom">Custom</string>
    <string name="list_item_food_type_common">Common</string>
    <string name="list_item_food_type_usda">USDA DB</string>
    <string name="add_food_activity_title">Add new custom food</string>
    <string-array name="food_categories_array">
        <item>Dairy &amp; Eggs</item>
        <item>Meat</item>
        <item>Breads &amp; Cereals</item>
        <item>Fast Food</item>
        <item>Soups &amp; Salads</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Beans &amp; Legumes</item>
        <item>Pasta &amp; Rice</item>
        <item>Fish &amp; Seafood</item>
        <item>Sweets &amp; Snacks</item>
        <item>Drinks</item>
        <item>Nuts &amp; Seeds</item>
        <item>Sauces, Spices, Oils</item>
        <item>Other</item>
    </string-array>
    <string-array name="spinner_period_options">
        <item>Past 7 days</item>
        <item>Past 30 days</item>
        <item>Past 90 days</item>
        <item>Past year</item>
        <item>Custom period</item>
    </string-array>
    <string-array name="spinner_day_sort_options">
        <item>Date: oldest first</item>
        <item>Date: newest first</item>
        <item>Calories: high to low</item>
        <item>Calories: low to high</item>
        <item>Protein: high to low</item>
        <item>Protein: low to high</item>
        <item>Carbs: high to low</item>
        <item>Carbs: low to high</item>
        <item>Fat: high to low</item>
        <item>Fat: low to high</item>
    </string-array>
    <string-array name="spinner_food_sort_options">
        <item>Count: high to low</item>
        <item>Count: low to high</item>
        <item>Calories consumed: high to low</item>
        <item>Calories consumed: low to high</item>
        <item>Weight consumed: high to low</item>
        <item>Weight consumed: low to high</item>
        <item>Last consumed: newest first</item>
        <item>Last consumed: oldest first</item>
    </string-array>
    <string-array name="units">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="spinner_activity_levels">
        <item>Sedentary (little or no exercise)</item>          <!--1.2x-->
        <item>Light (exercise 1–3 times/week)</item>            <!--1.375x-->
        <item>Moderate (exercise 4–5 times/week)</item>         <!--1.465x-->
        <item>Active (exercise daily)</item>                    <!--or intense exercise 3-4 times/week: 1.55x-->
        <item>Very Active (intense exercise daily)</item>       <!--1.725x-->
        <item>Extra active (very intense exercise daily)</item> <!--or physical job: 1.9x-->
    </string-array>
    <string-array name="spinner_goals">
        <item>Maintain current weight</item>
        <item>Slow weight loss (-10% calories)</item>
        <item>Weight loss (-20% calories)</item>
        <item>Slow weight gain (+10% calories)</item>
        <item>Weight gain (+20% calories)</item>
    </string-array>
    <string-array name="themes">
        <item>Light theme</item>
        <item>Dark theme</item>
    </string-array>
</resources>
