<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/food_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        app:titleMargin="0dp" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/food_list_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_below="@id/food_list_toolbar"
        app:tabPaddingTop="0dp"
        app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:elevation="8dp"
        android:outlineProvider="background"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />

    </com.google.android.material.tabs.TabLayout>


    <SearchView
        android:id="@+id/searchview_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/food_list_tabs"
        android:queryHint="Enter food name"
        android:iconifiedByDefault="false">

    </SearchView>

    <CheckBox
        android:id="@+id/fragment_food_list_extended_search_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extended_search"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/searchview_food"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/food_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_food_list_extended_search_checkbox">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button_createfood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:src="@drawable/plus_sign"
        android:tint="@color/white"
        app:backgroundTint="@color/colorPrimary"
        app:borderWidth="2dp"
        app:rippleColor="@color/colorPrimaryDark"
        app:useCompatPadding="true" />

</RelativeLayout>