<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_set_macros_calories_target_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Current Daily Calories Target" />

    <TextView
        android:id="@+id/dialog_set_macros_calories_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_set_macros_calories_target_text"
        android:text="2500 kcal" />

    <RadioGroup
        android:id="@+id/dialog_set_macros_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_set_macros_calories_target">

        <RadioButton
            android:id="@+id/dialog_set_macros_radio_percent"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="Set using percentages" />

        <RadioButton
            android:id="@+id/dialog_set_macros_radio_manual"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Set weight manually" />


    </RadioGroup>

    <TextView
        android:id="@+id/dialog_set_macros_text_protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/protein"
        android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_set_macros_radio_group" />

    <EditText
        android:id="@+id/dialog_set_macros_edit_protein"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="30"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_set_macros_text_protein" />

    <TextView
        android:id="@+id/dialog_set_macros_info_protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="% = 200 g x 4 kcal/g = 800 kcal"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_set_macros_edit_protein"
        app:layout_constraintStart_toEndOf="@id/dialog_set_macros_edit_protein"
        app:layout_constraintTop_toTopOf="@+id/dialog_set_macros_edit_protein" />

    <TextView
        android:id="@+id/dialog_set_macros_text_carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/carbs"
        android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_set_macros_edit_protein" />

    <EditText
        android:id="@+id/dialog_set_macros_edit_carbs"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="40"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_set_macros_text_carbs" />

    <TextView
        android:id="@+id/dialog_set_macros_info_carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="0dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="% = 300 g x 4 kcal/g = 1200 kcal"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_set_macros_edit_carbs"
        app:layout_constraintStart_toEndOf="@id/dialog_set_macros_edit_carbs"
        app:layout_constraintTop_toTopOf="@+id/dialog_set_macros_edit_carbs" />

    <TextView
        android:id="@+id/dialog_set_macros_text_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/fat"
        android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_set_macros_edit_carbs"
        tools:text="Fat" />

    <EditText
        android:id="@+id/dialog_set_macros_edit_fat"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="30"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_set_macros_text_fat" />

    <TextView
        android:id="@+id/dialog_set_macros_info_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="0dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="% = 80 g x 9 kcal/g = 720 kcal"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_set_macros_edit_fat"
        app:layout_constraintStart_toEndOf="@id/dialog_set_macros_edit_fat"
        app:layout_constraintTop_toTopOf="@+id/dialog_set_macros_edit_fat" />

    <TextView
        android:id="@+id/dialog_set_macros_warning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Sum of percentages: 96%\nPercentages should add up to 100%"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_set_macros_edit_fat" />


</androidx.constraintlayout.widget.ConstraintLayout>